fix: adaptive menu z-index

--- a/src/components/side-menu/side-menu.module.scss
+++ b/src/components/side-menu/side-menu.module.scss
@@ -10,6 +10,7 @@
   @include small {
     top: 129px;
   }
+  z-index: 100;
   left: 0;
   width: 100%;
   height: 550px;
